--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>ui/qml/main.qml</file>
+        <file>ui/qml/chart/ChartTile.qml</file>
     </qresource>
 </RCC>
